# dyss

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  requirements.txt  requirements_local.txt  setup.sh
data/: chr01_start_from_30000.fa  chr02_start_from_30000.fa  lambda_half.fa  mock_parameters.csv  parameters.csv
data/test_reads/: ban_m_desktop_20171227_FAH27381_MN23006_mux_scan_2017_12_27_ban_m_yeast_lambda_49080_read_29_ch_97_strand.fast5  ubuntu_20171225_FAH27381_MN23006_sequencing_run_2017_12_26_yeast_lambda_ban_m_second_run_60691_read_2418_ch_312_strand.fast5  ubuntu_20171225_FAH27381_MN23006_sequencing_run_2017_12_26_yeast_lambda_ban_m_second_run_60691_read_2420_ch_19_strand.fast5  ubuntu_20171225_FAH27381_MN23006_sequencing_run_2017_12_26_yeast_lambda_ban_m_second_run_60691_read_2421_ch_65_strand.fast5  ubuntu_20171225_FAH27381_MN23006_sequencing_run_2017_12_26_yeast_lambda_ban_m_second_run_60691_read_2424_ch_19_strand.fast5  ubuntu_20171225_FAH27381_MN23006_sequencing_run_2017_12_26_yeast_lambda_ban_m_second_run_60691_read_2424_ch_48_strand.fast5  ubuntu_20171225_FAH27381_MN23006_sequencing_run_2017_12_26_yeast_lambda_ban_m_second_run_60691_read_2424_ch_70_strand.fast5  ubuntu_20171225_FAH27381_MN23006_sequencing_run_2017_12_26_yeast_lambda_ban_m_second_run_60691_read_2425_ch_383_strand.fast5  (+215 more)
scripts/: run_dyss_for_ecoli_15min.sh  run_dyss_for_ecoli_mock_1min.sh  run_dyss_for_ecoli_test.sh  run_dyss_for_lambda_mock_1min.sh  run_dyss_for_lambda_test.sh
src/: dyss.py  dyss.rs  dyss_debug.py  lib.rs  score_cheker.R  signal_based_analysis.py
