[package]
name = "dyss"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

[dependencies]
dtw = {path = "../dtw"}
squiggler = {path = "../squiggler"}
rand = "*"
libc = "0.2"
bio = "*"
rayon = "*"
utility = {path = "./../utility"}

[lib]
name = "dyss"
crate_type =["dylib"]
